<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/Item_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin"
    >



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Match Description" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/im_team_one"
            android:layout_width="@dimen/team_img_size"
            android:layout_height="@dimen/team_img_size"
            android:layout_margin="@dimen/margin"
            android:contentDescription="@string/flag_team_one"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDescription"
            tools:srcCompat="@tools:sample/avatars" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_name_team_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin"
            tools:text="@string/team_one"
            app:layout_constraintEnd_toEndOf="@+id/im_team_one"
            app:layout_constraintStart_toStartOf="@+id/im_team_one"
            app:layout_constraintTop_toBottomOf="@+id/im_team_one" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_score_team_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin"
            tools:text="@string/score_team_one"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintBottom_toBottomOf="@+id/im_team_one"
            app:layout_constraintStart_toEndOf="@+id/im_team_one"
            app:layout_constraintTop_toTopOf="@+id/im_team_one" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin"
            android:text="@string/vs"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintBottom_toBottomOf="@id/im_team_two"
            app:layout_constraintStart_toEndOf="@+id/tv_score_team_one"
            app:layout_constraintTop_toTopOf="@id/im_team_one"
            app:layout_constraintEnd_toStartOf="@id/tv_score_team_two"

            />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/im_team_two"
            android:layout_width="@dimen/team_img_size"
            android:layout_height="@dimen/team_img_size"
            android:layout_margin="@dimen/margin"
            android:contentDescription="@string/flag_team_two"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDescription"
            tools:srcCompat="@tools:sample/avatars" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_name_team_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin"
            tools:text="@string/team_2"
            app:layout_constraintEnd_toEndOf="@+id/im_team_two"
            app:layout_constraintStart_toStartOf="@+id/im_team_two"
            app:layout_constraintTop_toBottomOf="@+id/im_team_two" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_score_team_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin"
            tools:text="@string/score_team_two"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintBottom_toBottomOf="@+id/im_team_two"
            app:layout_constraintEnd_toStartOf="@+id/im_team_two"
            app:layout_constraintTop_toTopOf="@+id/im_team_two" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>