<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".ui.DetailActivity"
        >


        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_bar_height"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:collapsedTitleTextAppearance="@style/TextAppearance.App.CollapsingToolbar.Collapsed"
                app:expandedTitleTextAppearance="@style/TextAppearance.App.CollapsingToolbar.Expanded"

                >

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivPlace"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop" />

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar"
                    style="@style/Widget.MaterialComponents.Toolbar.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@android:color/transparent"
                    android:elevation="2dp" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/win_team"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_team_one"
                    android:textAlignment="center"
                    android:textSize="20pt"

                    />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/im_team_one"
                    android:layout_width="@dimen/team_img_size"
                    android:layout_height="@dimen/team_img_size"
                    android:layout_marginStart="@dimen/margin"
                    android:layout_marginTop="@dimen/margin"
                    android:contentDescription="@string/flag_team_one"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvDescription"
                    tools:srcCompat="@tools:sample/avatars" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvDescription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin"
                    android:layout_marginTop="@dimen/margin"
                    android:layout_marginEnd="@dimen/margin"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Match Description" />

                <androidx.appcompat.widget.AppCompatRatingBar
                    android:id="@+id/rb_team_one"
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin"
                    app:layout_constraintEnd_toEndOf="@+id/im_team_one"
                    app:layout_constraintStart_toStartOf="@+id/im_team_one"
                    app:layout_constraintTop_toBottomOf="@+id/im_team_one" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_team_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:layout_constraintEnd_toEndOf="@+id/im_team_one"
                    app:layout_constraintStart_toStartOf="@+id/im_team_one"
                    app:layout_constraintTop_toBottomOf="@+id/rb_team_one"
                    tools:text="@string/team_one" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_score_team_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    app:layout_constraintBottom_toBottomOf="@+id/im_team_one"
                    app:layout_constraintEnd_toStartOf="@+id/tvVersus"
                    app:layout_constraintStart_toEndOf="@+id/im_team_one"
                    app:layout_constraintTop_toTopOf="@+id/im_team_one"
                    tools:text="99" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvVersus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/vs"
                    app:layout_constraintBottom_toBottomOf="@+id/im_team_one"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/im_team_one" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/im_team_two"
                    android:layout_width="@dimen/team_img_size"
                    android:layout_height="@dimen/team_img_size"
                    android:layout_marginTop="@dimen/margin"
                    android:layout_marginEnd="@dimen/margin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvDescription"
                    tools:srcCompat="@tools:sample/avatars" />

                <androidx.appcompat.widget.AppCompatRatingBar
                    android:id="@+id/rb_team_two"
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin"
                    app:layout_constraintEnd_toEndOf="@+id/im_team_two"
                    app:layout_constraintStart_toStartOf="@+id/im_team_two"
                    app:layout_constraintTop_toBottomOf="@+id/im_team_two" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_team_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:layout_constraintEnd_toEndOf="@+id/im_team_two"
                    app:layout_constraintStart_toStartOf="@+id/im_team_two"
                    app:layout_constraintTop_toBottomOf="@+id/rb_team_two"
                    tools:text="@string/team_2" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_score_team_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    app:layout_constraintBottom_toBottomOf="@+id/im_team_two"
                    app:layout_constraintEnd_toStartOf="@+id/im_team_two"
                    app:layout_constraintStart_toEndOf="@+id/tvVersus"
                    app:layout_constraintTop_toTopOf="@+id/im_team_two"
                    tools:text="99" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</androidx.constraintlayout.widget.ConstraintLayout>